# django-site-project-with-poetry

./: README.md  db.sqlite3  pyproject.toml
polls/: admin.py  models.py  views.py
polls/templates/polls/: index.html
project/: settings.py  urls.py
