[tool.poetry]
name = "django-site-project"
version = "0.1.0"
description = ""
authors = ["Allen Chen <allen.chen@hiero7.com>"]
readme = "README.md"
packages = [{include = "django_site_project"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
